Fixed several issues brought up by further testing
Added tests for editable.js which brought up a few errors.
CSS selector for signaling error didn't match the latest markup.
Passing the generic lookupTable column attribute to an editor
spilled over to other editors.
Dropped _handleCellClick which was left over from earlier versions.

--- a/src/datatable/assets/datatable-editable/skins/sam/datatable-editable-skin.css
+++ b/src/datatable/assets/datatable-editable/skins/sam/datatable-editable-skin.css
@@ -2,10 +2,8 @@
     cursor: pointer;
 }
 
-.yui3-skin-sam .yui3-datatable-celleditor-error input,
-
-.yui3-skin-sam .yui3-datatable-celleditor-error textarea {
-    background-color: orange;
+.yui3-skin-sam .yui3-datatable-celleditor-error {
+    background-color: orange !important;
 }
 
 .yui3-skin-sam .yui3-datatable-celleditor-editing {
